修改 listView刷新架构 个推 改成极光

--- a/app/src/main/res/layout/act_registermain.xml
+++ b/app/src/main/res/layout/act_registermain.xml
@@ -27,11 +27,11 @@
             android:gravity="center_vertical"
             android:orientation="vertical" >
 
-            <ListView
+            <com.yvision.widget.RefreshAndLoadListView
                 android:id="@+id/OldEmployeeNameList"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" >
-            </ListView>
+            </com.yvision.widget.RefreshAndLoadListView>
         </LinearLayout>
 
         <!-- 添加新人 -->
