--- a/app/src/main/res/layout/act_usermain.xml
+++ b/app/src/main/res/layout/act_usermain.xml
@@ -20,11 +20,11 @@
             android:gravity="center_vertical"
             android:orientation="vertical" >
 
-            <ListView
+            <com.yvision.widget.RefreshAndLoadListView
                 android:id="@+id/UserList"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" >
-            </ListView>
+            </com.yvision.widget.RefreshAndLoadListView>
         </LinearLayout>
 
         <include layout="@layout/bottombar_umain"/>
